--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@
 
 # Embedded web-server pid file
 /.web-server-pid
+/.idea/.gitignore
+/.idea/modules.xml
+/.idea/orders.iml
+/.idea/php.xml
+/.idea/vcs.xml
