--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,42 @@
-# Cache and logs (Symfony2)
-/app/cache/*
-/app/logs/*
-!app/cache/.gitkeep
-!app/logs/.gitkeep
-
-# Email spool folder
-/app/spool/*
-
-# Cache, session files and logs (Symfony3)
-/var/cache/*
-/var/logs/*
-/var/sessions/*
-!var/cache/.gitkeep
-!var/logs/.gitkeep
-!var/sessions/.gitkeep
-
-# Logs (Symfony4)
-/var/log/*
-!var/log/.gitkeep
-
-# Parameters
-/app/config/parameters.yml
-/app/config/parameters.ini
-
-# Managed by Composer
-/app/bootstrap.php.cache
-/var/bootstrap.php.cache
-/bin/*
-!bin/console
-!bin/symfony_requirements
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
 /vendor/
+###< symfony/framework-bundle ###
 
-# Assets and user uploads
-/web/bundles/
-/web/uploads/
-
-# PHPUnit
-/app/phpunit.xml
+###> phpunit/phpunit ###
 /phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
 
-# Build data
-/build/
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
 
-# Composer PHAR
-/composer.phar
+###> IDE ###
+/.idea/
+/.vscode/
+###< IDE ###
 
-# Backup entities generated with doctrine:generate:entities command
-**/Entity/*~
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
 
-# Embedded web-server pid file
-/.web-server-pid
-/.idea/.gitignore
-/.idea/modules.xml
-/.idea/orders.iml
-/.idea/php.xml
-/.idea/vcs.xml
+###> Custom ###
+.DS_Store
+*.log
+.web-server-pid
+###< Custom ###
+/.env
+/.env.dev
+/config/packages/cache.yaml
+/composer.lock
+/symfony.lock
