Proje dosyaları yüklendi

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.3-fpm
+FROM php:8.2-fpm
 
 RUN apt-get update && apt-get install -y \
     git \
@@ -8,18 +8,18 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     nano \
     libonig-dev \
-    && docker-php-ext-install pdo pdo_pgsql \
+    && docker-php-ext-install pdo pdo_pgsql bcmath \
     && pecl install xdebug \
     && docker-php-ext-enable xdebug
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-COPY docker/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
+COPY xdebug.ini "${PHP_INI_DIR}/conf.d/"
 
 WORKDIR /var/www/html
 
-RUN chown -R www-data:www-data /var/www/html
-
-USER www-data
+RUN mkdir -p var/log && \
+    chown -R www-data:www-data var && \
+    chmod -R 775 var
 
 CMD ["php-fpm"]
