--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,11 +7,13 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - .:/var/www/html
+      - ../:/var/www/html
     depends_on:
-      - database
+      - postgres
+    extra_hosts:
+      - host.docker.internal:host-gateway
     environment:
-      PHP_IDE_CONFIG: "serverName=localhost"
+      - PHP_IDE_CONFIG=serverName=development
 
   nginx:
     image: nginx:latest
@@ -19,12 +21,13 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - orders-app
 
-  database:
+  postgres:
     image: postgres:${POSTGRES_VERSION:-16}-alpine
+    container_name: postgres
     environment:
       POSTGRES_DB: postgres
       POSTGRES_PASSWORD: password
@@ -32,7 +35,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - database_data:/var/lib/postgresql/data:rw
+      - postgres_data:/var/lib/postgresql/data:rw
 
 volumes:
-  database_data:
+  postgres_data:
