--- a/docker/xdebug.ini
+++ b/docker/xdebug.ini
@@ -1,11 +1,7 @@
-zend_extension=xdebug.so
-
 [xdebug]
-xdebug.mode=debug,profile
+xdebug.mode=debug
 xdebug.start_with_request=yes
 xdebug.client_host=host.docker.internal
 xdebug.client_port=9003
 xdebug.log=/var/log/xdebug.log
-xdebug.idekey=PHPSTORM
-xdebug.profiler_output_name=cachegrind.out.%t.%p
-xdebug.max_nesting_level=250
+xdebug.discover_client_host=true
